Move KAZE, AKAZE, AgastFeatureDetector, BRISK, BOWImgDescriptorExtractor to contrib/xfeatures2d

--- a/modules/ccalib/CMakeLists.txt
+++ b/modules/ccalib/CMakeLists.txt
@@ -1,2 +1,2 @@
 set(the_description "Custom Calibration Pattern")
-ocv_define_module(ccalib opencv_core opencv_imgproc opencv_3d opencv_calib opencv_features2d opencv_highgui opencv_imgcodecs WRAP python)
+ocv_define_module(ccalib opencv_core opencv_imgproc opencv_3d opencv_calib opencv_features2d opencv_xfeatures2d opencv_highgui opencv_imgcodecs WRAP python)
